--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .App {
   text-align: center;
+  display: flex;
+  height: 100vh;
+  flex-direction: column;
+  background-color: #0f1316;
 }
 
 .App-logo {
@@ -15,13 +19,19 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  height: 15vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.App-header h1,
+.App-header h6 {
+  margin: 0;
+  margin-left: 20px;
 }
 
 .App-link {
